--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.18.0",
+    "autoprefixer": "^10.4.20",
     "bcrypt": "^5.1.1",
     "jose": "^5.6.3",
     "next": "14.2.5",
+    "postcss": "^8.4.49",
     "prisma": "^5.17.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
+    "tailwindcss": "^3.4.15",
     "zod": "^3.23.8"
   },
   "devDependencies": {
